# whatsapp-ai-billing-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Dockerfile.celery  PRECOMMIT_SETUP_SUMMARY.md  README.md  cloudbuild-celery.yaml  cloudbuild.yaml  curl.md  example.env  pyproject.toml  requirements.txt  setup-precommit.sh
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  deploy-celery-to-cloud-run-jobs.yml  deploy-to-cloud-run.yml
app/: config.py  main.py
app/api/admin/: admin.py
app/celery/: celery_app.py  tasks.py
app/services/: __init__.py  ai_service.py  db_service.py  document_creator.py  firebase_chat_history.py  gcp_storage.py  jobs_service.py  jwt_service.py  llm_service.py  otp_service.py  processed_messages.py  vector_db.py  vectordb_document_creator.py
app/utils/: __init__.py  background_job.py  constants.py  document_processor.py  global_logging.py  helpers.py  llm_tools.py  prompt.py  types.py  whatsapp.py
docs/: CELERY_DEPLOYMENT.md  CLOUD_BUILD_TRIGGERS.md  CLOUD_RUN_PUBSUB_TRIGGER.md  PRECOMMIT_SETUP.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  httpClient.ts  main.tsx  util.ts
frontend/src/components/AuthLayout/: AuthLayout.tsx
frontend/src/context/: GlobalContext.tsx
infrastructure/: .gitignore  .terraform.lock.hcl  README.md  backend.tf  data.tf  init_env.sh  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_main.py  test_webhook.py
(+7 files in other folders)
