[project]
name = "whatsapp-ai-billing-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi[standard]==0.115.12",
    "firebase-admin>=6.8.0",
    "google-cloud-firestore==2.20.2",
    "google-cloud-storage==3.1.0",
    "httpx==0.27.0",
    "langchain==0.3.25",
    "langchain-openai>=0.3.23",
    "langchain-pinecone>=0.2.11",
    "numpy==2.2.5",
    "openai==1.78.1",
    "opencv-python>=4.8.0,<5.0.0",
    "openpyxl==3.1.2",
    "pandas==2.2.3",
    "passlib[bcrypt]==1.7.4",
    "pdf2image==1.17.0",
    "pendulum>=3.1.0",
    "pillow>=10.0.0,<11.0.0",
    "pinecone-client==6.0.0",
    "pydantic==2.11.4",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings==2.9.1",
    "pyjwt>=2.10.1",
    "pypdf2==3.0.1",
    "pytesseract==0.3.10",
    "pytest==8.3.5",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-jose[cryptography]==3.4.0",
    "requests==2.32.3",
    "uuid>=1.30",
    "uvicorn[standard]==0.34.2",
]
